--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
+    "mavon-editor": "^2.9.1",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
