--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@kangc/v-md-editor": "^2.3.7",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.2-beta.70",
     "prismjs": "^1.24.1",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
@@ -37,6 +38,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-0",
+    "babel-plugin-import": "^1.13.3",
     "chai": "^4.1.2",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
