--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "vue-property-decorator": "^9.1.2"
   }
 }
