--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5",
-    "vue-property-decorator": "^9.1.2"
+    "vue-property-decorator": "^9.1.2",
+    "webpack-bundle-analyzer": "^4.4.2"
   }
 }
