--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.70",
+    "mockjs": "^1.1.0",
     "prismjs": "^1.24.1",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
