--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 NODE_ENV = 'development'
 VUE_APP_TITLE = 'development'
 
-VUE_APP_BASE_URL = "http://42.192.211.76:8083"
+VUE_APP_BASE_URL = "http://localhost:8083"
