--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "blog_vue3_typescript",
-  "version": "0.1.0",
+  "name": "Saltyish's_Blog",
+  "version": "1.6.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -15,6 +15,7 @@
     "element-plus": "^1.0.2-beta.70",
     "mockjs": "^1.1.0",
     "prismjs": "^1.24.1",
+    "raindrop-fx": "^1.0.8",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
