--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@kangc/v-md-editor": "^2.3.7",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "element-plus": "^1.0.2-beta.70",
+    "element-plus": "^2.2.12",
+    "esbuild": "^0.14.53",
     "mockjs": "^1.1.0",
     "prismjs": "^1.24.1",
     "raindrop-fx": "^1.0.8",
@@ -20,6 +21,7 @@
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
+    "vue-template-compiler": "^2.7.8",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
@@ -49,6 +51,8 @@
     "sass": "^1.39.0",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5",
+    "unplugin-auto-import": "^0.11.1",
+    "unplugin-vue-components": "^0.22.0",
     "vue-property-decorator": "^9.1.2",
     "webpack-bundle-analyzer": "^4.4.2"
   }
